# minisearch

./: CMakeLists.txt  Makefile  README.txt
include/: Trie.h  commandParsing.h  index.h  postingList.h  printer.h  scoring.h  search.h
src/: Trie.c  commandParsing.c  index.c  main.c  postingList.c  printer.c  scoring.c  search.c
